--- a/assets/plugins/global/plugins.bundle.css
+++ b/assets/plugins/global/plugins.bundle.css
@@ -31830,7 +31830,7 @@ body.swal2-height-auto {
   color: #FFFFFF;
 }
 .tns .tns-controls button:hover {
-  background-color: #0095E8;
+  background-color: #39702c;
 }
 .tns .tns-nav {
   display: flex;
